[gd_scene load_steps=18 format=3 uid="uid://bx6ucca5ytue1"]

[ext_resource type="Script" uid="uid://l6oc37enxjwn" path="res://UI/CraftingStuff/crafting_ui.gd" id="1_lhtmg"]
[ext_resource type="Script" uid="uid://dpnbc4gmnldvl" path="res://Inventory/Recipes/ItemRecipe.gd" id="2_dwsxy"]
[ext_resource type="Texture2D" uid="uid://cyl5op08pfjy7" path="res://Equipments/Textures/axe.png" id="2_wvcuu"]
[ext_resource type="PackedScene" uid="uid://dwgn11r34kia7" path="res://Inventory/inv_ui_slot.tscn" id="3_dwsxy"]
[ext_resource type="Resource" uid="uid://dsk815a4mu331" path="res://Inventory/Recipes/Tool/SpearRecipe.tres" id="4_nipvv"]
[ext_resource type="Resource" uid="uid://c5bbetu5hfq0y" path="res://Inventory/Recipes/Tool/AxeRecipe.tres" id="5_teqgt"]
[ext_resource type="Resource" uid="uid://ckrmvnqm7itik" path="res://Inventory/Recipes/Tool/StoneKnifeRecipe.tres" id="5_xrecy"]
[ext_resource type="Resource" uid="uid://njgic1rvcixc" path="res://Inventory/Recipes/Tool/LongStickRecipe.tres" id="6_b1rkf"]
[ext_resource type="Texture2D" uid="uid://vssgpuslcim7" path="res://UI/CraftingIcons/Stations.png" id="7_teqgt"]
[ext_resource type="Texture2D" uid="uid://b4aavf50v04hg" path="res://UI/CraftingIcons/Armors.png" id="8_6d3cb"]
[ext_resource type="Resource" uid="uid://cgk3kosv6g1fs" path="res://Inventory/Recipes/Stations/ChoppingBoardRecipe.tres" id="8_tcai8"]
[ext_resource type="Resource" uid="uid://b84jnnaei2nxg" path="res://Inventory/Recipes/Armors/GrassSkirtRecipe.tres" id="9_qbckx"]
[ext_resource type="Texture2D" uid="uid://dvt17qxvv7oiq" path="res://UI/CraftingIcons/Tools.png" id="9_xrecy"]
[ext_resource type="Resource" uid="uid://b6y8x0idf43ao" path="res://Inventory/playerinventory.tres" id="9_xx4xj"]
[ext_resource type="Texture2D" uid="uid://u3ncgyv55ww3" path="res://UI/CraftingIcons/Consumables.png" id="10_tcai8"]
[ext_resource type="Texture2D" uid="uid://duoflpol68l2i" path="res://UI/CraftingIcons/Resources.png" id="11_qbckx"]
[ext_resource type="PackedScene" uid="uid://beikuhxvqne6m" path="res://UI/CraftingStuff/ResourceNeed.tscn" id="16_3x4dx"]

[node name="CraftingUI" type="PanelContainer"]
offset_right = 457.0
offset_bottom = 257.0
script = ExtResource("1_lhtmg")
recipe_array = Array[ExtResource("2_dwsxy")]([ExtResource("6_b1rkf"), ExtResource("5_xrecy"), ExtResource("5_teqgt"), ExtResource("4_nipvv"), ExtResource("8_tcai8"), ExtResource("9_qbckx"), ExtResource("6_b1rkf"), ExtResource("6_b1rkf"), ExtResource("6_b1rkf"), ExtResource("6_b1rkf")])
player_inventory = ExtResource("9_xx4xj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Icons" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_direction = 2
layout_mode = 2

[node name="Stations" type="TextureButton" parent="MarginContainer/HBoxContainer/Icons"]
layout_mode = 2
texture_normal = ExtResource("7_teqgt")

[node name="Armors" type="TextureButton" parent="MarginContainer/HBoxContainer/Icons"]
layout_mode = 2
texture_normal = ExtResource("8_6d3cb")

[node name="Tools" type="TextureButton" parent="MarginContainer/HBoxContainer/Icons"]
layout_mode = 2
texture_normal = ExtResource("9_xrecy")

[node name="Consumables" type="TextureButton" parent="MarginContainer/HBoxContainer/Icons"]
layout_mode = 2
texture_normal = ExtResource("10_tcai8")

[node name="Materials" type="TextureButton" parent="MarginContainer/HBoxContainer/Icons"]
layout_mode = 2
texture_normal = ExtResource("11_qbckx")

[node name="Tree" type="Tree" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.57
theme_override_font_sizes/font_size = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Test item Name Label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemTexture" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_wvcuu")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
columns = 7

[node name="Inv_UI_Slot" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot2" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot3" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot8" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot9" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot10" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot4" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot11" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot12" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot13" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot14" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot15" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot16" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot17" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot5" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot6" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="Inv_UI_Slot7" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("3_dwsxy")]
layout_mode = 2

[node name="ResourceNeed" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("16_3x4dx")]
layout_mode = 2

[node name="ResourceNeed2" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("16_3x4dx")]
layout_mode = 2

[node name="ResourceNeed3" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("16_3x4dx")]
layout_mode = 2

[node name="ResourceNeed4" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("16_3x4dx")]
layout_mode = 2

[node name="ResourceNeed5" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("16_3x4dx")]
layout_mode = 2

[node name="ResourceNeed6" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("16_3x4dx")]
layout_mode = 2

[node name="ResourceNeed7" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("16_3x4dx")]
layout_mode = 2

[node name="ResourceNeed8" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("16_3x4dx")]
layout_mode = 2

[node name="ResourceNeed9" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("16_3x4dx")]
layout_mode = 2

[node name="ResourceNeed10" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("16_3x4dx")]
layout_mode = 2

[node name="ResourceNeed11" parent="MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("16_3x4dx")]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Craft"

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="cell_selected" from="MarginContainer/HBoxContainer/Tree" to="." method="_on_tree_cell_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
